# damavis-dbt-spark-poc

./: .gitignore  README.md  pyproject.toml
damavis_dbt_spark/: README.md  dbt_project.yml
damavis_dbt_spark/models/: example_model.sql  example_partition_model.sql  example_view.sql  schema.yml
